--- a/examples/conv_lstm.ipynb
+++ b/examples/conv_lstm.ipynb
@@ -32,19 +32,19 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W1006 15:02:33.177458  2372 deprecation_wrapper.py:119] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:68: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "W1007 10:33:50.981981 15628 deprecation_wrapper.py:119] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:68: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
       "\n",
-      "W1006 15:02:33.198400  2372 deprecation_wrapper.py:119] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:507: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "W1007 10:33:51.030850 15628 deprecation_wrapper.py:119] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:507: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
       "\n",
-      "W1006 15:02:33.202392  2372 deprecation_wrapper.py:119] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3831: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "W1007 10:33:51.044813 15628 deprecation_wrapper.py:119] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3831: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
       "\n",
-      "W1006 15:02:33.246273  2372 deprecation_wrapper.py:119] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:167: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
+      "W1007 10:33:51.145544 15628 deprecation_wrapper.py:119] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:167: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
       "\n",
-      "W1006 15:02:33.247269  2372 deprecation_wrapper.py:119] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:174: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
+      "W1007 10:33:51.146542 15628 deprecation_wrapper.py:119] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:174: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
       "\n",
-      "W1006 15:02:34.924786  2372 deprecation_wrapper.py:119] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\optimizers.py:757: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "W1007 10:33:52.972659 15628 deprecation_wrapper.py:119] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\optimizers.py:757: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
       "\n",
-      "W1006 15:02:34.950716  2372 deprecation.py:323] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\tensorflow\\python\\ops\\nn_impl.py:180: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "W1007 10:33:52.998589 15628 deprecation.py:323] From c:\\users\\fengzhiheng\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\tensorflow\\python\\ops\\nn_impl.py:180: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
      ]
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,12 +131,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "noisy_movies, shifted_movies = generate_movies(n_samples=1200)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(noisy_movies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1200, 15, 40, 40, 1)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "noisy_movies.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
