--- a/examples/conv_lstm.ipynb
+++ b/examples/conv_lstm.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers.convolutional import Conv3D\n",
@@ -26,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,15 +60,22 @@
     "    labs_train=labs_train.astype(np.float32)\n",
     "    return imgs_train,labs_train\n",
     "\n",
-    "#imgs_train,labs_train = pre_process()\n",
+    "#load 原始数据\n",
+    "imgs_train,labs_train = pre_process()\n",
+    "\n",
     "#load cnn的结果\n",
-    "imgs_train = np.load('cnnPredectResutl.npy')\n",
-    "labs_train = np.load('cnnPredectLabels.npy')\n"
+    "#imgs_train = np.load('cnnPredectResutl.npy')\n",
+    "#labs_train = np.load('cnnPredectLabels.npy')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +84,7 @@
        "(582, 512, 512, 1)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,9 +110,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Logging before flag parsing goes to stderr.\n",
+      "W1009 20:24:37.871079 13112 deprecation_wrapper.py:119] From c:\\users\\administrator\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:68: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "W1009 20:24:37.886707 13112 deprecation_wrapper.py:119] From c:\\users\\administrator\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:507: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "W1009 20:24:37.886707 13112 deprecation_wrapper.py:119] From c:\\users\\administrator\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:3831: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "\n",
+      "W1009 20:24:38.042977 13112 deprecation_wrapper.py:119] From c:\\users\\administrator\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:167: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
+      "\n",
+      "W1009 20:24:38.042977 13112 deprecation_wrapper.py:119] From c:\\users\\administrator\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:174: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
+      "\n",
+      "W1009 20:24:42.137283 13112 deprecation_wrapper.py:119] From c:\\users\\administrator\\anaconda3\\envs\\kerasenv\\lib\\site-packages\\keras\\optimizers.py:757: The name tf.train.Optimizer is deprecated. Please use tf.compat.v1.train.Optimizer instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "seq = Sequential()\n",
     "seq.add(ConvLSTM2D(filters=40, kernel_size=(3, 3),\n",
@@ -184,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +239,7 @@
        "numpy.ndarray"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +259,7 @@
        "(582, 1, 512, 512, 1)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,16 +270,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9989357"
+       "1.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,13 +332,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "weightStoreFatherPath = './LSTMWeights/'\n",
-    "weightStorePath=weightStoreFatherPath + 'weightCNNLSTM.hdf5'\n",
+    "weightStorePath=weightStoreFatherPath + 'weight.hdf5'\n",
     "model_checkpoint = ModelCheckpoint(weightStorePath, verbose=1, monitor='val_loss', save_best_only=True)\n",
     "csv_logger = CSVLogger('./LSTMWeights/log.csv', append=True, separator='\\t')"
    ]
@@ -782,16 +815,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataPath = './CNN_LSTM_Results/'\n",
+    "\n",
     "import cv2\n",
-    "PredectionsImagesPath = './CNN_LSTM_Results/PredectionsImages/'\n",
-    "MaskImagesPath ='./CNN_LSTM_Results/LabelsImages/'\n",
+    "PredectionsImagesPath = './LSTMResults/PredectionsImages/'\n",
+    "MaskImagesPath ='./LSTMResults/LabelsImages/'\n",
     "# matplotlib.image.imsave(PredectionsImagesPath+'name.png', oneimage)\n",
-    "weightStorePath =  './LSTMWeights/'+'weightCNNLSTM.hdf5'\n",
+    "weightStorePath =  './LSTMWeights/'+'weight.hdf5'\n",
     "seq.load_weights(weightStorePath)\n",
     "for i in range(noisy_movies.shape[0]):\n",
     "    which = i\n",
